# opengrain

./: CMakeLists.txt  ProjectHome.md  notes.txt
doc/: building.txt  principles.txt
doc/.svn/: all-wcprops  entries
doc/.svn/text-base/: contrib.txt.svn-base
doc/website/: style.css
doc/website/.svn/: all-wcprops  entries
doc/website/.svn/text-base/: developers.html.svn-base  grain.png.svn-base  index.html.svn-base
logo/.svn/: all-wcprops  entries
logo/.svn/text-base/: opengrain-large.png.svn-base  opengrain-small.png.svn-base  opengrain.svg.svn-base  sinc.png.svn-base  sinc.py.svn-base  sinc.svg.svn-base
python/: opengrain.i
python/.svn/: all-wcprops  entries
python/.svn/text-base/: CMakeLists.txt.svn-base
pythontests/.svn/: all-wcprops  entries
pythontests/.svn/text-base/: initshutdowntest.py.svn-base
src/: CMakeLists.txt  analoggrain.c  biquad.h  chorus.c  complex_buffer.h  complex_fmgrain.c  compressor.h  convolver.h  curve.h  delayline.c  delayline.h  distributions.c  envelope.h  eq.c  feedbackdelay.h  fmgrain.c  fmgrain.h  grain.h  grain_model.c  grain_source.h  grain_stream.c  grain_stream.h  grain_tests.c  grain_tests.h  grainmixer.c  impulsegrain.h  impulsetrigger.h  interpolator.c  libsndfile.c  location.h  loopgrain.c  matrix.c  matrix.h  moddelayline.h  multisinegrain.c  multisinegrain.h  opengrain.h.in  output.c  pluckgrain.c  random.c  (+23 more)
src/.svn/: all-wcprops  entries
src/.svn/text-base/: CMakeLists.txt.svn-base  acoustics.c.svn-base  acoustics.h.svn-base  allpass.c.svn-base  allpass.h.svn-base  analoggrain.h.svn-base  audio.c.svn-base  audio.h.svn-base  biquad.c.svn-base  buffer.c.svn-base  buffer.h.svn-base  chorus.h.svn-base  complex_buffer.c.svn-base  complex_fmgrain.h.svn-base  compressor.c.svn-base  convolver.c.svn-base  crossdelay.c.svn-base  crossdelay.h.svn-base  curve.c.svn-base  distributions.h.svn-base  dsfgrain.c.svn-base  dsfgrain.h.svn-base  envelope.c.svn-base  eq.h.svn-base  feedbackdelay.c.svn-base  glissgrain.c.svn-base  glissgrain.h.svn-base  grain.c.svn-base  grain_model.h.svn-base  grain_source.c.svn-base  grainmixer.h.svn-base  hrtf.c.svn-base  hrtf.h.svn-base  impulsegrain.c.svn-base  impulsetrigger.c.svn-base  interpolator.h.svn-base  location.c.svn-base  loopgrain.h.svn-base  moddelayline.c.svn-base  noisegrain.c.svn-base  (+32 more)
src/.svn/tmp/: spatializer.c.tmp
src/api/: audio_api.c  audio_api.h  base_api.h  error_codes.c  errors.c  errors.h  mixer_api.c  mixer_api.h
src/api/.svn/: all-wcprops  entries
src/api/.svn/text-base/: base_api.c.svn-base  gr.h.svn-base  gr_errors.h.svn-base
tests/: CMakeLists.txt  test_initshutdown.c
tests/.svn/: all-wcprops  entries
tests/.svn/text-base/: test_audio.c.svn-base
